@@ -5,7 +5,11 @@ ikiwiki (3.20130904.2) UNRELEASED; urgency=low
   * Fixed unncessary tight loop hash copy in saveindex where a pointer
     can be used instead. Can speed up refreshes by nearly 50% in some
     circumstances.
-  * Optmised loadindex by caching the page name in the index.
+  * Optimized loadindex by caching the page name in the index.
+  * Added only_committed_changes config setting, which speeds up wiki
+    refresh by querying git to find the files that were changed, rather
+    than looking at the work tree. Not enabled by default as it can
+    break some setups where not all files get committed to git.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Sep 2013 10:01:10 -0400
 
